网关配置更新，在网关中配置使用 SwaggerUI 访问 Rest 接口；可弃用 consumer 项目直接请求网关的 swagger 接口页面

--- a/inventory/src/main/resources/registry.conf
+++ b/inventory/src/main/resources/registry.conf
@@ -46,7 +46,7 @@ registry {
 
 config {
   # file、nacos 、apollo、zk、consul、etcd3
-  type = "consul"
+  type = "file"
 
   nacos {
     serverAddr = "localhost"
