--- a/shopping-mall-gateway/pom.xml
+++ b/shopping-mall-gateway/pom.xml
@@ -24,6 +24,32 @@
       <artifactId>spring-cloud-starter-gateway</artifactId>
       <version>2.0.2.RELEASE</version> <!--原版本有问题，所以降级-->
     </dependency>
+
+    <!--lombok 引用-->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
+
+    <!--swagger-->
+    <dependency>
+      <groupId>com.spring4all</groupId>
+      <artifactId>swagger-spring-boot-starter</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+    </dependency>
+
+    <!-- fastJSON 工具包-->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
