--- a/order/src/main/resources/registry.conf
+++ b/order/src/main/resources/registry.conf
@@ -46,7 +46,7 @@ registry {
 
 config {
   # file、nacos 、apollo、zk、consul、etcd3
-  type = "consul"
+  type = "file"
 
   nacos {
     serverAddr = "localhost"
