--- a/inventory/pom.xml
+++ b/inventory/pom.xml
@@ -101,6 +101,11 @@
       <groupId>com.shopping</groupId>
       <artifactId>shopping-mall-service</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.rocketmq</groupId>
+      <artifactId>rocketmq-spring-boot-starter</artifactId>
+    </dependency>
   </dependencies>
 
   <profiles>
