--- a/order/pom.xml
+++ b/order/pom.xml
@@ -99,6 +99,15 @@
             <groupId>com.shopping</groupId>
             <artifactId>shopping-mall-service</artifactId>
         </dependency>
+        <!--rocketMq-->
+        <!--<dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-client</artifactId>
+        </dependency>-->
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
     <profiles>
