--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -93,3 +93,11 @@ mybatis-plus:
 ribbon:
   ReadTimeout: 5000 # 获取 rest 接口返回数据超时时间, 单位 毫秒，默认为 1 秒钟
   ConnectTimeout: 5000 # 连接 rest 接口超时时间, 单位 毫秒，默认为 1 秒钟
+
+# rocketmq 配置
+rocketmq:
+  name-server: 192.168.111.129:9876
+  producer:
+    group: producer_group # 生产数据的组
+    send-message-timeout: 300000 # 发送数据超时时间，单位毫秒
+    retry-times-when-send-async-failed: 2 # 设置异步发送消息失败时，重试次数为 2(默认也是 2)
