--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,8 @@
     <validation.version>2.0.1.Final</validation.version>
 <!--    <seata.version>0.9.0.1</seata.version>-->
     <seata.version>1.0.0</seata.version>
+    <rocketmq.version>4.6.0</rocketmq.version>
+    <rocketmq-boot.version>2.0.4</rocketmq-boot.version>
   </properties>
 
   <dependencyManagement>
@@ -242,6 +244,19 @@
           </exclusion>
         </exclusions>
       </dependency>
+      <!--<dependency>
+        <groupId>org.apache.rocketmq</groupId>
+        <artifactId>rocketmq-client</artifactId>
+        <version>${rocketmq.version}</version>
+      </dependency>-->
+
+      <dependency>
+        <groupId>org.apache.rocketmq</groupId>
+        <artifactId>rocketmq-spring-boot-starter</artifactId>
+        <version>${rocketmq-boot.version}</version>
+      </dependency>
+
+
     </dependencies>
   </dependencyManagement>
 
