--- a/shopping-mall-consumer/pom.xml
+++ b/shopping-mall-consumer/pom.xml
@@ -86,6 +86,11 @@
         </exclusion>
       </exclusions>
     </dependency>
+
+    <dependency>
+      <groupId>io.lettuce</groupId>
+      <artifactId>lettuce-core</artifactId>
+    </dependency>
   </dependencies>
 
   <profiles>
