--- a/pom.xml
+++ b/pom.xml
@@ -47,10 +47,12 @@
     <httpclient.version>4.5.3</httpclient.version>
     <commons-lang3.version>3.7</commons-lang3.version>
     <validation.version>2.0.1.Final</validation.version>
-<!--    <seata.version>0.9.0.1</seata.version>-->
     <seata.version>1.0.0</seata.version>
     <rocketmq.version>4.6.0</rocketmq.version>
     <rocketmq-boot.version>2.0.4</rocketmq-boot.version>
+    <sentinel-spring-cloud-gateway-adapter.version>1.7.1</sentinel-spring-cloud-gateway-adapter.version>
+    <sentinel-transport-simple-http.version>1.7.1</sentinel-transport-simple-http.version>
+    <lettuce.version>5.0.3.RELEASE</lettuce.version>
   </properties>
 
   <dependencyManagement>
@@ -250,13 +252,30 @@
         <artifactId>rocketmq-client</artifactId>
         <version>${rocketmq.version}</version>
       </dependency>-->
-
+      <!--rocketMQ-->
       <dependency>
         <groupId>org.apache.rocketmq</groupId>
         <artifactId>rocketmq-spring-boot-starter</artifactId>
         <version>${rocketmq-boot.version}</version>
       </dependency>
 
+      <!--sentinel 限流熔断-->
+      <dependency>
+        <groupId>com.alibaba.csp</groupId>
+        <artifactId>sentinel-spring-cloud-gateway-adapter</artifactId>
+        <version>${sentinel-spring-cloud-gateway-adapter.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.alibaba.csp</groupId>
+        <artifactId>sentinel-transport-simple-http</artifactId>
+        <version>${sentinel-transport-simple-http.version}</version>
+      </dependency>
+      <!--redis 连接客户端-->
+      <dependency>
+        <groupId>io.lettuce</groupId>
+        <artifactId>lettuce-core</artifactId>
+        <version>${lettuce.version}</version>
+      </dependency>
 
     </dependencies>
   </dependencyManagement>
