--- a/shopping-mall-service/src/main/resources/application.yml
+++ b/shopping-mall-service/src/main/resources/application.yml
@@ -1,9 +1,11 @@
-feign:
-  client:
-    config:
-      default:
-        connectTimeout: 5000  # feign 的连接超时时间
-        readTimeout: 5000 # feign 读取超时时间
-        loggerLevel: full
-
-
+#feign:
+#  client:
+#    config:
+#      default:
+#        connectTimeout: 5000  # feign 的连接超时时间
+#        readTimeout: 5000 # feign 读取超时时间
+#        loggerLevel: full
+#  hystrix:
+#    enabled: true # 启用熔断
+#
+#
