--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,9 @@
     <logback-classic.version>1.2.3</logback-classic.version>
     <lombok.version>1.18.8</lombok.version>
     <mysql.version>5.1.48</mysql.version>
-    <mybatis-spring-boot.version>2.0.1</mybatis-spring-boot.version>
+    <mybatis-spring-boot.version>2.1.0</mybatis-spring-boot.version>
     <mybatis-plus.version>3.1.1</mybatis-plus.version>
+    <durid.version>1.1.10</durid.version>
     <durid-spring-boot.version>1.1.17</durid-spring-boot.version>
     <swagger2.version>2.9.2</swagger2.version>
     <swagger-boot.version>1.9.1.RELEASE</swagger-boot.version>
@@ -55,6 +56,7 @@
     <lettuce.version>5.0.3.RELEASE</lettuce.version>
     <commons-pool2.version>2.6.2</commons-pool2.version>
     <spring-data-redis.version>2.1.14.RELEASE</spring-data-redis.version>
+    <sharding-jdbc-spring-boot.version>4.0.0</sharding-jdbc-spring-boot.version>
   </properties>
 
   <dependencyManagement>
@@ -82,11 +84,11 @@
         <version>${shopping-mall-service.version}</version>
       </dependency>
 
-      <dependency>
+      <!--<dependency>
         <groupId>net.logstash.logback</groupId>
         <artifactId>logstash-logback-encoder</artifactId>
         <version>6.0</version>
-      </dependency>
+      </dependency>-->
       <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
@@ -109,6 +111,11 @@
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
         <version>${mysql.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>druid</artifactId>
+        <version>${durid.version}</version>
       </dependency>
       <!--druid 连接池-->
       <dependency>
@@ -289,6 +296,13 @@
         <groupId>org.springframework.data</groupId>
         <artifactId>spring-data-redis</artifactId>
         <version>${spring-data-redis.version}</version>
+      </dependency>
+
+      <!--shading jdbc 分库分表-->
+      <dependency>
+        <groupId>org.apache.shardingsphere</groupId>
+        <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
+        <version>${sharding-jdbc-spring-boot.version}</version>
       </dependency>
 
     </dependencies>
